# src/main/java/com/Microservice/shoppingService/Controller/SaleController.java
@@ -23,40 +23,54 @@ public class SaleController implements SalesApiDelegate {
         this.saleService = saleService;
     }
 
+    /**
+     * GET
+     * */
     @Override
-    public ResponseEntity<SaleListDTO> retriveAllSales() {
-
+    public ResponseEntity<SaleListDTO> retrieveAllSales() {
         SaleListDTO saleListDTO = new SaleListDTO().items(this.saleService.retriveAll());
-
         return ResponseEntity.status(HttpStatus.OK).body(saleListDTO);
     }
 
+    /**
+     * POST
+     * */
     @Override
     public ResponseEntity<SaleDTO> createSale(SaleRequestDTO saleRequestDTO) {
         SaleDTO saleEntity = this.saleService.save(saleRequestDTO);
-
-
         return ResponseEntity.status(HttpStatus.OK).body(saleEntity);
     }
 
+    /**
+     * GET
+     * */
     @Override
     public ResponseEntity<Void> removeSaleById(Integer id) {
         return SalesApiDelegate.super.removeSaleById(id);
     }
 
+    /**
+    * GET
+    * */
     @Override
-    public ResponseEntity<SaleDTO> retriveSaleById(Integer id) {
+    public ResponseEntity<SaleDTO> retrieveSaleById(Integer id) {
         SaleDTO response = this.saleService.findById(id);
         return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
+    /**
+     * POST
+     * */
     @Override
     public ResponseEntity<SaleDTO> updateSale(SaleDTO saleDTO) {
         return ResponseEntity.status(HttpStatus.OK).body(this.saleService.update(saleDTO));
     }
 
+    /**
+     * GET
+     * */
     @Override
-    public ResponseEntity<SaleListDTO> retriveSaleByClientId(Integer id) {
+    public ResponseEntity<SaleListDTO> retrieveSaleByClientId(Integer id) {
         List<SaleDTO> saleDTO = this.saleService.findByClientId(id);
         SaleListDTO resonse =  new SaleListDTO().items(saleDTO);
         return ResponseEntity.status(HttpStatus.OK).body(resonse);
